@@ -132,6 +132,21 @@ public class Bootique {
 	}
 
 	/**
+	 * Adds a Module generated by the provider. Provider may optionally specify
+	 * that the Module overrides services in some other Module.
+	 * 
+	 * @since 0.12
+	 * @param moduleProvider
+	 *            a provider of Module and override spec.
+	 * @return this instance of {@link Bootique}.
+	 */
+	public Bootique module(BQModuleProvider moduleProvider) {
+		Objects.requireNonNull(moduleProvider);
+		providers.add(moduleProvider);
+		return this;
+	}
+
+	/**
 	 * Starts an API call chain to override an array of Modules.
 	 * 
 	 * @param overriddenTypes
@@ -246,7 +261,7 @@ public class Bootique {
 		}
 		// handle startup Guice exceptions
 		catch (ProvisionException e) {
-			
+
 			// TODO: a dependency on JOPT OptionException shouldn't be here
 			return (e.getCause() instanceof OptionException) ? CommandOutcome.failed(1, e.getCause().getMessage())
 					: CommandOutcome.failed(1, e);
